# Microsoft-Copilot-Agent-CLI

./: .gitignore  pyproject.toml
copilot_cli/: __init__.py  client.py  config.py  main.py  output.py
copilot_cli/commands/: agent.py  connection_references.py  connections.py  connector.py  connectors.py  environment.py  flow.py  mcp.py  prompt.py  restapi.py  solution.py  tool.py
docs/: COPILOT_CLI_GUIDE.md  topic-yaml-schema.md
