[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-cli"
version = "0.1.0"
description = "CLI interface for Microsoft Copilot Studio agents via Dataverse API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Adam Bertram", email = "adbertram@gmail.com"}
]
keywords = ["copilot", "microsoft", "dataverse", "cli", "api", "automation", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer[all]>=0.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "python-docx>=1.0.0",
    "msal>=1.28.0",
    "PyYAML>=6.0.0",
    "microsoft-agents-copilotstudio-client>=0.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
copilot = "copilot_cli.main:app"

[project.urls]
"Homepage" = "https://github.com/adbertram/copilot-cli"
"Bug Tracker" = "https://github.com/adbertram/copilot-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["copilot_cli*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=copilot_cli --cov-report=term-missing"
